--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/jacket.jpg" width = "275" height = "350"/>
+                        <img src="images/jacket.JPG" width = "275" height = "350"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
