--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/peosc.jpg" width = "280" height = "350"/>
+                        <img src="images/peosc.JPG" width = "280" height = "350"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
